--- a/propertiesdiffandmerge/pom.xml
+++ b/propertiesdiffandmerge/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>es.javinr</groupId>
   <artifactId>propertiesdiffandmerge</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <name>propertiesdiffandmerge</name>
